# Registry

./: Activity.h  CMakeLists.txt  Registry.cpp  Registry.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
test/: tst_activity.cpp  tst_mainwindow.cpp  tst_registry.cpp
